--- a/pasta3.html
+++ b/pasta3.html
@@ -4,35 +4,36 @@
         <title>Mexican Macaroni Salad</title>
         <script src="scripts.js"></script>
         <link rel="stylesheet" href="stylesheet.css">
+	<!--Navigation bar-->
         <div id="navbar">
             <ul>
                 <li><a href="homepage.html">Home</a></li>
-                <li class="dropdown">
-                    <a href="javascript:void(0)" class="dropbtn">Categories</a>
-                    <div class="dropdown-content">
-                        <!--Dropdown menu with each link jumping to specific setion of categories webpage-->
-                        <a href="categories.html#SoupsSection">Soups</a>
-                        <a href="categories.html#DessertsSection">Desserts</a>
-                        <a href="categories.html#CasserolesSection">Casseroles</a>
-                        <a href="categories.html#CrockpotsSection">Crockpots</a>
-                        <a href="categories.html#Pastas">Pastas</a>
-                    </div>
+                <li class="dropdown"><a href="javascript:void(0)" class="dropbtn">Categories</a>
+			<!--Dropdown menu with each link jumping to specific setion of categories webpage-->
+                    	<div class="dropdown-content">
+                        	<a href="categories.html#SoupsSection">Soups</a>
+                       		<a href="categories.html#DessertsSection">Desserts</a>
+                        	<a href="categories.html#CasserolesSection">Casseroles</a>
+                        	<a href="categories.html#CrockpotsSection">Crockpots</a>
+                        	<a href="categories.html#Pastas">Pastas</a>
+                    	</div>
                 </li>
                 <li><a href="about.html">About Us</a></li>
             </ul>   
         </div>
-
-	    <h1>Ensalada de Coditos (Mexican Macaroni Salad)
-        </h1>
+	<!--Recipe title section-->
+	<div id ="recipeTitle">
+	    <h1>Ensalada de Coditos (Mexican Macaroni Salad)</h1>
+	</div>
     </head>
     
     <body>
-        <!--image-->
-        <div class="recipeImage">
+        <!--Recipe image section-->
+        <div id="recipeImage">
             <img src="recipe images/ensalada_de_coditos_mexican_style.png" alt="A casserole dish filled with mexican macaroni salad.">
         </div>
         <!--Ingredients section-->
-        <div class="ingredients">
+        <div id="ingredients">
             <h3>Ingredients:</h3>
             <ul>
                 <li>10 ½ oz macaroni pasta</li>
@@ -49,8 +50,8 @@
                 <li>Salt & pepper (to taste)</li>
             </ul>
         </div>
-        <!--Step-by-step section-->
-        <div class="instructions">
+        <!--Instructions section-->
+        <div id="instructions">
             <h3>Instructions:</h3>
             <ol>
                 <li>Bring a large pot of lightly salted water to a boil. Add macaroni pasta and cook until tender.</li>
@@ -60,10 +61,16 @@
                 <li>Adjust with salt and pepper to your taste, cover the bowl and place it in the fridge until serving.</li>
             </ol>
         </div>
-	<button onclick="copyRecipe()">Copy Recipe</button>
+	<!--Button bar section-->
+	<div id="buttonBar">
+		<button onclick="copyRecipe()">Copy Recipe</button>
+	</div>
     </body>
 
     <footer>
-        <p>Original recipe can be found <a href="https://www.maricruzavalos.com/ensalada-de-coditos-mexican-macaroni-salad/">here.</a></p>
+	<!--Original credits section-->
+	<div id="credits">
+        	<p>Original recipe can be found <a href="https://www.maricruzavalos.com/ensalada-de-coditos-mexican-macaroni-salad/">here.</a></p>
+	</div>
     </footer>
 </html>
