--- a/soup2.html
+++ b/soup2.html
@@ -4,33 +4,36 @@
         <title>Easy Creamy Vegetable Soup </title>
         <script src="scripts.js"></script>
         <link rel="stylesheet" href="stylesheet.css">
+	<!--Navigation bar-->
         <div id="navbar">
             <ul>
                 <li><a href="homepage.html">Home</a></li>
-                <li class="dropdown">
-                    <a href="javascript:void(0)" class="dropbtn">Categories</a>
-                    <div class="dropdown-content">
-                        <!--Dropdown menu with each link jumping to specific setion of categories webpage-->
-                        <a href="categories.html#SoupsSection">Soups</a>
-                        <a href="categories.html#DessertsSection">Desserts</a>
-                        <a href="categories.html#CasserolesSection">Casseroles</a>
-                        <a href="categories.html#CrockpotsSection">Crockpots</a>
-                        <a href="categories.html#Pastas">Pastas</a>
+                <li class="dropdown"><a href="javascript:void(0)" class="dropbtn">Categories</a>
+                    	<!--Dropdown menu with each link jumping to specific setion of categories webpage-->
+			<div class="dropdown-content">
+                        	<a href="categories.html#SoupsSection">Soups</a>
+                        	<a href="categories.html#DessertsSection">Desserts</a>
+                        	<a href="categories.html#CasserolesSection">Casseroles</a>
+                        	<a href="categories.html#CrockpotsSection">Crockpots</a>
+                        	<a href="categories.html#Pastas">Pastas</a>
                     </div>
                 </li>
                 <li><a href="about.html">About Us</a></li>
             </ul>   
         </div>
-	    <h1>Easy Creamy Vegetable Soup</h1>
+	<!--Recipe title section-->
+	<div id ="recipeTitle">
+	     <h1>Easy Creamy Vegetable Soup</h1>
+	</div>
     </head>
 
     <body>
-        <!--image-->
-        <div class="recipeImage">
+        <!--Recipe image section-->
+        <div id="recipeImage">
             <img src="recipe images/Homemade-Creamy-Vegtable-Soup-Recipe-1200.jpg" alt="Creamy vegetable soup in a bowl.">
         </div>
         <!--Ingredients section-->
-        <div class="ingredients">
+        <div id="ingredients">
             <h3>Ingredients:</h3>
             <ul>
                 <li>1 large onion</li>
@@ -47,8 +50,8 @@
                 <li>1/4 cup (60ml) half-and-half, cream, or coconut milk</li>
             </ul>
         </div>
-        <!--Step-by-step section-->
-        <div class="instructions">
+         <!--Instructions section-->
+        <div id="instructions">
             <h3>Instructions:</h3>
             <ol>
                 <li>Chop the onion, carrots, and celery into 1/2-inch chunks.</li>
@@ -62,10 +65,16 @@
                 <li>Stir in the cream. Taste for seasoning and adjust with more salt and pepper if necessary.</li>
             </ol>
         </div>
-	<button onclick="copyRecipe()">Copy Recipe</button>
+	<!--Button bar section-->
+	<div id="buttonBar">
+		<button onclick="copyRecipe()">Copy Recipe</button>
+	</div>
     </body>
 
     <footer>
-        <p>Original recipe can be found <a href="https://www.inspiredtaste.net/9603/creamy-vegetable-soup-recipe/">here</a></p>
+	<!--Original credits section-->
+	<div id="credits">
+        	<p>Original recipe can be found <a href="https://www.inspiredtaste.net/9603/creamy-vegetable-soup-recipe/">here</a></p>
+	</div>
     </footer>
 </html>
