--- a/soup3.html
+++ b/soup3.html
@@ -4,34 +4,36 @@
         <title>Easy Chicken Noodle Soup</title>
         <script src="scripts.js"></script>
         <link rel="stylesheet" href="stylesheet.css">
+	<!--Navigation bar-->
         <div id="navbar">
             <ul>
                 <li><a href="homepage.html">Home</a></li>
-                <li class="dropdown">
-                    <a href="javascript:void(0)" class="dropbtn">Categories</a>
-                    <div class="dropdown-content">
-                        <!--Dropdown menu with each link jumping to specific setion of categories webpage-->
-                        <a href="categories.html#SoupsSection">Soups</a>
-                        <a href="categories.html#DessertsSection">Desserts</a>
-                        <a href="categories.html#CasserolesSection">Casseroles</a>
-                        <a href="categories.html#CrockpotsSection">Crockpots</a>
-                        <a href="categories.html#Pastas">Pastas</a>
+                <li class="dropdown"><a href="javascript:void(0)" class="dropbtn">Categories</a>
+			<!--Dropdown menu with each link jumping to specific setion of categories webpage-->
+                    	<div class="dropdown-content">
+                        	<a href="categories.html#SoupsSection">Soups</a>
+                        	<a href="categories.html#DessertsSection">Desserts</a>
+                        	<a href="categories.html#CasserolesSection">Casseroles</a>
+                        	<a href="categories.html#CrockpotsSection">Crockpots</a>
+                        	<a href="categories.html#Pastas">Pastas</a>
                     </div>
                 </li>
                 <li><a href="about.html">About Us</a></li>
             </ul>   
         </div>
-
+	<!--Recipe title section-->
+	<div id ="recipeTitle">
 	    <h1>Easy Chicken Noodle Soup</h1>
+	</div>
     </head>
     
     <body>
-        <!--image-->
-        <div class="recipeImage">
+        <!--Recipe image section-->
+        <div id="recipeImage">
             <img src="recipe images/quick-and-easy-chicken-noodle-soup-allrecipes.png" alt="Chicken Noodle Soup">
         </div>
         <!--Ingredients section-->
-        <div class="ingredients">
+        <div id="ingredients">
             <h3>Ingredients:</h3>
             <ul>
                 <li>1 tablespoon butter</li>
@@ -47,8 +49,8 @@
                 <li>salt and ground black pepper to taste</li>
             </ul>
         </div>
-        <!--Step-by-step section-->
-        <div class="instructions">
+        <!--Instructions section-->
+        <div id="instructions">
             <h3>Instructions:</h3>
             <ol>
                 <li>Melt butter in a large pot over medium heat. Add onion and celery and cook until just tender, about 5 minutes.</li>
@@ -56,10 +58,16 @@
                 <li>Reduce heat and simmer for 20 minutes. Then it is ready to serve.</li>
             </ol>
         </div>
-	<button onclick="copyRecipe()">Copy Recipe</button>
+	<!--Button bar section-->
+	<div id="buttonBar">
+		<button onclick="copyRecipe()">Copy Recipe</button>
+	</div>
     </body>
 
     <footer>
-        <p>Original recipe can be found <a href="https://www.allrecipes.com/recipe/26460/quick-and-easy-chicken-noodle-soup/">here.</a></p>
+	<!--Original credits section-->
+	<div id="credits">
+        	<p>Original recipe can be found <a href="https://www.allrecipes.com/recipe/26460/quick-and-easy-chicken-noodle-soup/">here.</a></p>
+	</div>
     </footer>
 </html>
